[gd_scene load_steps=17 format=3 uid="uid://k6g5aiw4uo4l"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_q7e7t"]
[ext_resource type="Texture2D" uid="uid://dyvluvlslg3il" path="res://assets/player/char_blue_1.png" id="1_qxhnm"]
[ext_resource type="Script" path="res://scripts/player/state_machine.gd" id="3_445pu"]
[ext_resource type="Script" path="res://scripts/player/sprite.gd" id="3_fsh7g"]
[ext_resource type="Script" path="res://scripts/player/animation.gd" id="4_ng5f2"]
[ext_resource type="Script" path="res://scripts/player/idle_state.gd" id="5_xksyf"]
[ext_resource type="Script" path="res://scripts/player/run_state.gd" id="6_cqxuu"]
[ext_resource type="Script" path="res://scripts/player/jump_state.gd" id="8_53vk6"]
[ext_resource type="Script" path="res://scripts/player/push_state.gd" id="9_26ki8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcah3"]
size = Vector2(15, 30)

[sub_resource type="Animation" id="Animation_nmofi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_qxhnm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y7ufi"]
resource_name = "fall"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_qxhnm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_ypbe2"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_qxhnm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_lv0km"]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_qxhnm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_5jl2q"]
resource_name = "run"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_qxhnm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rn0p"]
_data = {
"RESET": SubResource("Animation_nmofi"),
"fall": SubResource("Animation_y7ufi"),
"idle": SubResource("Animation_ypbe2"),
"jump": SubResource("Animation_lv0km"),
"run": SubResource("Animation_5jl2q")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_q7e7t")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 13)
shape = SubResource("RectangleShape2D_pcah3")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_qxhnm")
hframes = 8
vframes = 11
script = ExtResource("3_fsh7g")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rn0p")
}
autoplay = "idle"
script = ExtResource("4_ng5f2")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_445pu")
player = NodePath("..")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("5_xksyf")

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("6_cqxuu")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("8_53vk6")

[node name="PushState" type="Node" parent="StateMachine"]
script = ExtResource("9_26ki8")
